incrementes for the generator and old things

--- a/css/montagem.css
+++ b/css/montagem.css
@@ -369,6 +369,13 @@ body {
     font-size: 0.95em;
 }
 
+.subitem-5 {
+    margin-bottom: 10px;
+    text-align: justify;
+    margin-left: 60px;
+    font-size: 0.95em;
+}
+
 .toggle-options-wrapper {
     display: flex;
     background-color: #eef2f5;
